# rewire-viewer

./: .gitignore  Cargo.toml  LICENSE  README.md  cliff.toml  pixi.toml
.github/workflows/: ci.yaml  release.yaml
src/: app.rs  archetype.rs  grpc.rs  http.rs  icons.rs  lib.rs  main.rs  nodes_system.rs  nodes_view.rs  topics_system.rs  util.rs  view_class.rs  web.rs
src/ui/: mod.rs  status_bar.rs
src/views/: mod.rs
src/views/diagnostics/: mod.rs  system.rs
src/views/nodes/: mod.rs  system.rs
src/views/topics/: mod.rs  system.rs
web/: index.html
