[package]
name = "rewire-viewer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rewire viewer based on Rerun API for bridge introspection"
keywords = ["ros2", "rerun", "robotics", "visualization", "rewire"]
categories = ["science::robotics", "visualization"]
repository = "https://github.com/rewire-run/rewire-viewer"

[[bin]]
name = "rewire-viewer"
path = "src/main.rs"

[dependencies]
rerun = { version = "0.30", default-features = false, features = [
  "native_viewer",
  "sdk",
  "server",
] }
axum = "0.8"
egui_extras = "0.33"
serde_json = "1"
mimalloc = "0.1"
re_types_core = "0.30"
rewire-extras = { git = "https://github.com/rewire-run/rewire-extras", tag = "v0.1.0" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
